--- a/project quan ly giuong benh/fQuanLyBenhNhan.resx
+++ b/project quan ly giuong benh/fQuanLyBenhNhan.resx
@@ -120,4 +120,7 @@
   <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 23</value>
   </metadata>
+  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>153, 23</value>
+  </metadata>
 </root>
